--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,39 @@
-# Compiled class file
-*.class
+# Maven
+target/
+!.mvn/wrapper/maven-wrapper.jar
+**/logs/
+**/*.log
 
-# Log file
-*.log
+# Eclipse / IntelliJ / VSCode
+*.classpath
+*.project
+*.settings/
+.idea/
+*.iml
+*.vscode/
 
-# BlueJ files
-*.ctxt
+# Sistema operativo
+.DS_Store
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Archivos temporales
+*.tmp
+*.bak
+*.swp
 
-# Package Files #
+# Archivos de construcción y empaquetado
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Archivos de prueba o cobertura
+*.exec
+*.coverage
+*.lcov
+
+# Logs
+*.log
+
+# Credenciales o configuración local
+application-local.properties
+.env
