--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=ms04-rest-api
 server.port=8084
 
-spring.datasource.url=jdbc:h2:file:./data/persondb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
-spring.h2.console.path=/h2-console
-
+# PostgreSQL DB config
+spring.datasource.url=jdbc:postgresql://postgres:5432/persondb
+spring.datasource.username=leonardo
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
